# AMMICO

./: .dockerignore  .flake8  .flake8_nb  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  MANIFEST.in  README.md  TESTING_WITH_MOCKS.md  codecov.yml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_uv_lock.yml  docs.yml  publish_docker.yml  release.yml
CONTRIBUTING/: index.html
ammico/: __init__.py  check_gpu.py  color_analysis.py  colors.py  cropposts.py  display.py  expressions.py  faces.py  image_summary.py  inference.py  model.py  multimodal_search.py  objects.py  objects_cvlib.py  prompt_builder.py  summary.py  testing_all.py  text.py  utils.py  video_summary.py
ammico/data/: Color_tables.csv
ammico/data/ref/: test.csv
ammico/notebooks/: DemoImageSummaryVQA.ipynb  DemoNotebook_ammico.ipynb  DemoNotebook_ammico_MultimodalSearch.ipynb  DemoVideoSummaryVQA.ipynb  colors_analysis.ipynb  cropposts.ipynb  facial_expressions.ipynb  get-text-from-image.ipynb  image_summary.ipynb  image_summary_new.ipynb  multimodal_search.ipynb  objects_expression.ipynb
ammico/test/: conftest.py  pytest.ini  run_test_model_with_memory.py  test_colors.py  test_colors_analsyis.py  test_cropposts.py  test_display.py  test_expressions.py  test_faces.py  test_image_summary.py  test_inference.py  test_integration_inference.py  test_model.py  test_multimodal_embeddings_model.py  test_multimodal_search.py  test_objects.py  test_prompt_builder.py  test_summary.py  test_text.py  test_utils.py  test_video_vqa.py
ammico/test/data/: example_append_data_to_dict_in.json  example_dump_df.csv  example_faces.json  example_objects_cvlib.json  example_summary.txt  test-utf16.csv  test_data_out.csv  test_data_out_nokey.csv  test_read_csv_ref.json  text_IMG_3755.txt  text_IMG_3756.txt  text_IMG_3757.txt  text_translated_IMG_3755.txt  text_translated_IMG_3756.txt  text_translated_IMG_3757.txt  topic_analysis_test.csv
api/: index.html
doc/source/: conf.py  modules.rst
docs/: api.md  faq.md  index.md  set_up_credentials.md
docs/google_Cloud_Vision_API/: set_up_credentials.md
docs/modules/: colors.md  display.md  image_summary.md  text.md  video_summary.md
docs/notebooks/: DemoNotebook_ammico.ipynb
docs/source/: ammico.rst  conf.py  create_API_key_link.md  faq_link.md  index.rst  misinformation.rst  modules.rst  set_up_credentials.md
docs/source/notebooks/: 3_blip_saved_features_image.pt  DemoNotebook_ammico.ipynb  Example colors.ipynb  Example cropposts.ipynb  Example faces.ipynb  Example multimodal.ipynb  Example objects.ipynb  Example summary.ipynb  Example text.ipynb
docs/tutorials/: ammico_demo_getting_started.ipynb  ammico_demo_multimodal_analysis.ipynb  ammico_demo_multimodal_analysis.md  ammico_demo_video_summary.ipynb  colors.md  display.md  getting_started.md  image_summary.md  jupyter4nfdi.md  text.md  video_summary.md
faq/: index.html
misinformation/: __init__.py  accuracy.py  cropposts.py  display.py  faces.py  multimodal_search.py  objects.py  objects_cvlib.py  objects_imageai.py  summary.py  text.py  utils.py
misinformation/data/: map_test_set.json
misinformation/test/: conftest.py  pytest.ini  test_cropposts.py  test_display.py  test_faces.py  test_multimodal_search.py  test_objects.py  test_summary.py  test_text.py  test_utils.py
misinformation/test/data/: example_analysis_faces.json  example_analysis_objects.json  example_append_data_to_dict_in.txt  example_append_data_to_dict_out.json  example_append_data_to_dict_out.txt  example_dump_df.txt  example_faces.json  example_faces.txt  example_objects_cvlib.json  example_objects_cvlib.txt  example_objects_imageai.json  example_objects_imageai.txt  example_utils_init_dict.json  example_utils_init_dict.txt  text_translated_IMG_3755.txt  text_translated_IMG_3756.txt
modules/colors/: index.html
modules/display/: index.html
modules/image_summary/: index.html
modules/text/: index.html
modules/video_summary/: index.html
notebooks/: .~lock.data_out.csv#  colors_analysis.ipynb  colors_expression.ipynb  colors_expression_new.ipynb  cropposts.ipynb  data_out.csv  facial_expressions.ipynb  get-text-from-image.ipynb  image_summary.ipynb  multimodal_search.ipynb  objects_expression.ipynb
notebooks/obj_dect_cvlib/: objdect-cvlib.ipynb
notebooks/obj_dect_imageai/: obj_dect_imageai.ipynb
search/: search_index.json
set_up_credentials/: index.html
stylesheets/: extra.css
tutorials/: ammico_demo_getting_started.ipynb  ammico_demo_multimodal_analysis.ipynb  ammico_demo_video_summary.ipynb
tutorials/ammico_demo_multimodal_analysis/: index.html
tutorials/colors/: index.html
tutorials/display/: index.html
tutorials/getting_started/: index.html
tutorials/image_summary/: index.html
tutorials/jupyter4nfdi/: index.html
tutorials/text/: index.html
tutorials/video_summary/: index.html
