[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ammico"
dynamic = ["version"]
description = "AI Media and Misinformation Content Analysis Tool"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
    { name = "Dmitrii Kapitan", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.9, <3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "colorgram.py",
    "colour-science",
    "dash",
    "dash-bootstrap-components",
    "deepface",
    "google-cloud-vision",
    "googletrans==4.0.0rc1",
    "grpcio",
    "importlib_metadata",
    "importlib_resources",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "Pillow",
    "pooch",
    "retina_face",
    "setuptools",
    "spacy",
    "tensorflow<=2.16.0",
    "tf-keras",
    "tqdm",
    "webcolors",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "myst-parser",
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon",
    "nbsphinx",
]

nb = [
    "datasets",
    "huggingface-hub",
    "ipython",
    "jupyter",
    "jupyter_dash",
]


[project.urls]
homepage = "https://github.com/ssciwr/AMMICO"  # FIXME not shown by pip
documentation = "https://ssciwr.github.io/AMMICO/build/html/index.html"

[tool.setuptools]
packages = ["ammico","ammico.data"]
