[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ammico"
dynamic = ["version"]
description = "AI Media and Misinformation Content Analysis Tool"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
    { name = "Dmitrii Kapitan", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
 
dependencies = [
    "accelerate",
    "bitsandbytes",
    "colorgram.py",
    "colour-science",
    "ctranslate2",
    "dash",
    "dash-bootstrap-components",
    "faiss-gpu-cu11<=1.13.0",
    "google-cloud-vision",
    "googletrans-py", # instead of googletrans4.0.0rc1, for a temporary solution due to incompatibility with jupyterlab
    "grpcio",
    "importlib_resources",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pooch",
    "Pillow",
    "qwen-vl-utils",
    "safetensors",
    "scipy",
    "spacy",
    "tf-keras",
    "torch<2.9",
    "pytorch-lightning<=2.5.6",
    "sentence-transformers<5.2",
    "timm",
    "torchvision",
    "tqdm",
    "transformers<4.58",
    "torchcodec",
    "webcolors",
    "whisperx",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "mkdocs-material",
    "mkdocstrings[python]",
]

nb = [
    "datasets",
    "huggingface-hub",
    "ipython",
    "jupyter",
    "jupyter_dash",
]


[project.urls]
homepage = "https://github.com/ssciwr/AMMICO"  # FIXME not shown by pip
documentation = "https://ssciwr.github.io/AMMICO/build/html/index.html"

[tool.setuptools]
packages = ["ammico","ammico.data"]
